--- a/package.json
+++ b/package.json
@@ -1,20 +1,15 @@
 {
   "name": "portfolio",
   "version": "1.0.0",
-  "description": "Portfolio Website",
-  "main": "index.js",
-  "scripts": {
-    "start": "node backend/server.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
-  },
-  "devDependencies": {
-    "concurrently": "^8.2.2",
-    "nodemon": "^3.0.3"
-  },
-  "dependencies": {
-    "next": "^15.0.3"
-  },
   "engines": {
     "node": ">=14.0.0"
+  },
+  "scripts": {
+    "start": "node backend/server.js",
+    "build": "cd frontend && npm install && npm run build",
+    "deploy": "cd backend && npm install && npm start",
+    "railway:build": "npm install && cd frontend && npm install && npm run build",
+    "railway:dev": "railway run npm run dev",
+    "railway:start": "railway run npm start"
   }
 }
