--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node backend/server.js",
     "build": "cd frontend && npm install && npm run build",
     "deploy": "cd backend && npm install && npm start",
-    "postinstall": "npm run build"
+    "postinstall": "npm run build",
+    "db:migrate": "node backend/scripts/migrate.js"
   }
 }
