--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio",
   "version": "1.0.0",
   "engines": {
-    "node": ">=14.0.0"
+    "node": "18.17.0"
   },
   "scripts": {
     "start": "node backend/server.js",
