--- a/backend/package.json
+++ b/backend/package.json
@@ -17,13 +17,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.26.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.17.1",
-    "mongoose": "^6.0.0",
-    "cors": "^2.8.5",
-    "bcryptjs": "^2.4.3",
+    "express-validator": "^7.0.1",
     "jsonwebtoken": "^8.5.1",
-    "cloudinary": "^1.26.0",
+    "mongoose": "^6.0.0",
+    "multer": "^1.4.2",
     "@tinymce/tinymce-react": "^5.1.1"
   }
 }
