--- a/render.yaml
+++ b/render.yaml
@@ -4,10 +4,12 @@ services:
     env: node
     region: frankfurt
     buildCommand: |
-      npm install
-      cd frontend && npm install && npm run build
-      cd ../backend && rm -rf node_modules && npm install
-    startCommand: cd backend && npm start
+      echo "Installing backend dependencies..."
+      cd backend && npm install --production
+      echo "Installing frontend dependencies and building..."
+      cd ../frontend && npm install && npm run build
+      echo "Build completed"
+    startCommand: cd backend && node server.js
     envVars:
       - key: NODE_VERSION
         value: 18.17.0
