--- a/backend/package.json
+++ b/backend/package.json
@@ -7,15 +7,8 @@
   },
   "scripts": {
     "start": "node server.js",
-    "server": "nodemon server.js",
-    "client": "cd ../frontend && npm start",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "install-all": "npm install && cd ../frontend && npm install"
+    "dev": "nodemon server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "@tinymce/tinymce-react": "^5.1.1",
     "bcrypt": "^5.1.1",
@@ -28,5 +21,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.10.0",
     "multer": "^1.4.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
   }
 }
