--- a/package.json
+++ b/package.json
@@ -6,8 +6,6 @@
   },
   "scripts": {
     "start": "cd backend && node server.js",
-    "build": "cd frontend && npm install && npm run build",
-    "install-backend": "cd backend && npm install",
-    "install-frontend": "cd frontend && npm install"
+    "build": "cd frontend && npm install && npm run build"
   }
 }
