--- a/render.yaml
+++ b/render.yaml
@@ -6,7 +6,7 @@ services:
     buildCommand: |
       npm install
       cd frontend && npm install && npm run build
-      cd ../backend && rm -rf node_modules package-lock.json && npm install
+      cd ../backend && npm install
     startCommand: cd backend && npm start
     envVars:
       - key: NODE_VERSION
