--- a/backend/.env.production
+++ b/backend/.env.production
@@ -1,3 +1,5 @@
+NODE_ENV=production
+PORT=10000
 MONGODB_URI=your_mongodb_uri
 JWT_SECRET=your_jwt_secret
 CLOUDINARY_CLOUD_NAME=your_cloudinary_name
