--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "scripts": {
     "start": "cd backend && node server.js",
-    "build": "cd frontend && npm install && npm run build"
+    "build": "npm install && cd frontend && npm install && npm run build && cd ../backend && npm install",
+    "postinstall": "cd backend && npm install"
   }
 }
