--- a/frontend/.babelrc
+++ b/frontend/.babelrc
@@ -1,9 +1,9 @@
 {
   "presets": [
     "@babel/preset-env",
-    ["@babel/preset-react", { "runtime": "automatic" }]
+    "@babel/preset-react"
   ],
   "plugins": [
-    "@babel/plugin-transform-runtime"
+    "@babel/plugin-proposal-private-property-in-object"
   ]
 } 
