--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     region: frankfurt
     buildCommand: |
       npm install
-      cd frontend && npm install && npm run build
+      cd frontend && npm install --legacy-peer-deps && npm run build
       cd ../backend && npm install
     startCommand: cd backend && npm start
     envVars:
