--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "scripts": {
     "start": "cd backend && node server.js",
-    "build": "npm install && cd frontend && npm install --legacy-peer-deps && npm run build && cd ../backend && npm install",
+    "build": "npm install && cd frontend && npm install --legacy-peer-deps && npm install @babel/plugin-proposal-private-property-in-object --save-dev && npm run build && cd ../backend && npm install",
     "postinstall": "cd backend && npm install"
   }
 }
