--- a/render.yaml
+++ b/render.yaml
@@ -3,13 +3,8 @@ services:
     name: portfolio-mern
     env: node
     region: frankfurt
-    buildCommand: |
-      npm install
-      cd frontend && npm install --legacy-peer-deps
-      cd frontend && npm install @babel/plugin-proposal-private-property-in-object --save-dev
-      cd frontend && npm run build
-      cd ../backend && npm install
-    startCommand: cd backend && npm start
+    buildCommand: npm run build
+    startCommand: npm start
     envVars:
       - key: NODE_VERSION
         value: 18.17.0
