Fix: Update Babel configuration and build process

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,14 @@
     "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-react-hooks": "^4.6.0"
   },
+  "babel": {
+    "presets": [
+      "react-app"
+    ],
+    "plugins": [
+      "@babel/plugin-proposal-private-property-in-object"
+    ]
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
