--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,11 @@ services:
     name: portfolio-mern
     env: node
     region: frankfurt
-    buildCommand: npm run build
-    startCommand: npm start
+    buildCommand: |
+      npm install
+      cd frontend && npm install --legacy-peer-deps && npm run build
+      cd ../backend && npm install
+    startCommand: cd backend && npm start
     envVars:
       - key: NODE_VERSION
         value: 18.17.0
@@ -15,6 +18,12 @@ services:
       - key: MONGODB_URI
         sync: false
       - key: JWT_SECRET
+        sync: false
+      - key: CLOUDINARY_CLOUD_NAME
+        sync: false
+      - key: CLOUDINARY_API_KEY
+        sync: false
+      - key: CLOUDINARY_API_SECRET
         sync: false
     healthCheckPath: /api/health
     autoDeploy: true
