--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,2 @@
-REACT_APP_API_URL=https://your-render-app-name.onrender.com 
+REACT_APP_API_URL=https://your-app-name.onrender.com
+REACT_APP_TINYMCE_API_KEY=hbxu9tv200mhj7lsbrce2qkjmni3wx1xsx05v3jzkwb4vcx0
