--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -7,3 +7,7 @@
   from = "/*"
   to = "/index.html"
   status = 200 
+
+[build.environment]
+  NODE_VERSION = "18.17.0"
+  NPM_FLAGS = "--legacy-peer-deps" 
