--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Portfolio",
-  "name": "Ahmed's Portfolio",
+  "short_name": "Mekled",
+  "name": "Ahmed Mekled's Portfolio",
   "icons": [
     {
       "src": "favicon.ico",
