--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,3 +1,4 @@
-REACT_APP_API_URL=https://retropulse.onrender.com
+REACT_APP_API_URL=https://your-backend-url.onrender.com
 REACT_APP_TINYMCE_API_KEY=hbxu9tv200mhj7lsbrce2qkjmni3wx1xsx05v3jzkwb4vcx0
 REACT_APP_TINYMCE_DOMAIN=retropulse.onrender.com
+REACT_APP_SECURE=true
