--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "start": "react-scripts start",
     "build": "npm install --save-dev @babel/plugin-proposal-private-property-in-object && DISABLE_ESLINT_PLUGIN=true CI=false GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "vercel-build": "npm run build"
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.5.9",
