--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,13 @@
 {
   "version": 2,
-  "buildCommand": "npm run vercel-build",
-  "outputDirectory": "frontend/build",
   "builds": [
+    {
+      "src": "frontend/package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "build"
+      }
+    },
     {
       "src": "backend/server.js",
       "use": "@vercel/node",
@@ -17,11 +22,16 @@
       "dest": "backend/server.js"
     },
     {
-      "handle": "filesystem"
+      "src": "^/static/(.*)",
+      "dest": "frontend/build/static/$1"
+    },
+    {
+      "src": "^/[^.]+$",
+      "dest": "frontend/build/index.html"
     },
     {
       "src": "/(.*)",
-      "dest": "backend/server.js"
+      "dest": "frontend/build/$1"
     }
   ],
   "env": {
