--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,10 @@
 {
   "name": "portfolio-frontend",
   "version": "1.0.0",
+  "engines": {
+    "node": "18.x",
+    "npm": "9.x"
+  },
   "proxy": "http://localhost:5000",
   "scripts": {
     "start": "react-scripts start",
