--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,8 @@
       "src": "frontend/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "build"
+        "distDir": "build",
+        "nodeVersion": "18.x"
       }
     },
     {
