--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "portfolio",
   "version": "1.0.0",
   "engines": {
-    "node": "18.x",
-    "npm": "8.x"
+    "node": "18.x"
   },
   "scripts": {
     "start": "node backend/server.js",
