--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@tinymce/tinymce-react": "^5.1.1",
     "@uiw/react-md-editor": "^3.7.0",
     "axios": "^1.7.8",
+    "chart.js": "^4.4.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
