--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "scripts": {
     "start": "node backend/server.js",
-    "build": "cd frontend && npm install --legacy-peer-deps && npm run build && cd ../backend && npm install",
+    "build": "cd frontend && npm install --legacy-peer-deps && npm run build && cd ../backend && npm install && mkdir -p frontend/build && cp -r ../frontend/build ./frontend/",
     "render-build": "npm run build"
   },
   "dependencies": {
