--- a/render.yaml
+++ b/render.yaml
@@ -3,14 +3,11 @@ services:
     name: retropulse
     env: node
     region: frankfurt
-    buildCommand: |
-      npm install
-      cd frontend && npm install --legacy-peer-deps && npm run build
-      cd ../backend && npm install
-      # Ensure build directory exists in the correct location
-      mkdir -p frontend/build
-      cp -r ../frontend/build ./frontend/
+    buildCommand: npm run render-build
     startCommand: cd backend && npm start
+    domains:
+      - ahmedmakled.com
+      - www.ahmedmakled.com
     envVars:
       - key: NODE_ENV
         value: production
@@ -27,8 +24,14 @@ services:
       - key: CLOUDINARY_API_SECRET
         sync: false
       - key: FRONTEND_URL
-        value: https://retropulse.onrender.com
+        value: https://ahmedmakled.com
       - key: ALLOWED_ORIGINS
-        value: https://retropulse.onrender.com
+        value: https://ahmedmakled.com,https://www.ahmedmakled.com,https://retropulse.onrender.com
+      - key: DEBUG
+        value: "app:*"
+      - key: NODE_OPTIONS
+        value: "--max-old-space-size=1024"
+      - key: TZ
+        value: "UTC"
     healthCheckPath: /api/health
     autoDeploy: true
